fix z-index

--- a/src/style/CertificateContent.css
+++ b/src/style/CertificateContent.css
@@ -19,11 +19,11 @@
 }
 .carousel-control-prev {
   left: -12vh;
-  z-index: 1;
+  z-index: 0;
 }
 .carousel-control-next {
   right: -12vh;
-  z-index: 1;
+  z-index: 0;
 }
 .carousel {
   width: 60vw;
@@ -59,6 +59,13 @@
   overflow: hidden;
   color: #fff;
     width: 20vw;
+    box-shadow:
+  0 2.8px 2.2px rgba(6, 135, 251, 0.034),
+  0 6.7px 5.3px rgba(6, 135, 251, 0.048),
+  0 12.5px 10px rgba(6, 135, 251, 0.06),
+  0 22.3px 17.9px rgba(6, 135, 251, 0.072),
+  0 41.8px 33.4px rgba(6, 135, 251, 0.086),
+  0 100px 80px rgba(6, 135, 251, 0.12);
 }
 .box:after {
   content: "";
@@ -70,7 +77,7 @@
   transform: skewX(45deg);
   transition: all 1s ease 0s;
   background-color: #c7c7c7;
-  z-index: 1;
+  z-index: 0;
 }
 .box:hover:after {
   left: -170%;
